# opencv-sandbox

./: .gitignore  CMakeLists.txt  main.cpp
Glitcher/: Glitcher.cpp  Glitcher.h
